# study-next

blog-todos/backend/: "db.sqlite3"  .gitignore  Dockerfile  pyproject.toml  requirements.txt
blog-todos/backend/api/: models.py  serializers.py
blog-todos/backend/api/migrations/: 0001_initial.py
blog-todos/backend/rest_api/: settings.py
next_hp/: package-lock.json  package.json
next_hp/components/: Layout.jsx  Post.jsx
next_hp/pages/: Blog.jsx  Contact.jsx  index.jsx
next_hp/pages/posts/: [id].jsx
