[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["okamoto <okamoto_yu-ki@outlook.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
asgiref="3.2.10"
certifi="2020.12.5"
dj-database-url="0.5.0"
dj-static="0.0.6"
Django="3.1"
django-cors-headers="3.4.0"
djangorestframework="3.11.1"
djangorestframework-simplejwt="4.6.0"
djoser="2.0.3"
python-decouple="3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
